# MeshSentinel

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_alerting.py  0003_admin_operations.py  0004_node_organization.py  0005_operation_verify_states.py  0006_admin_batches.py  0007_config_profiles.py  0008_gateway_management.py  0009_node_gateway_links.py  0010_preferred_gateway.py  0011_node_type_override.py  0012_activity_log.py  0013_node_neighbors.py  0014_activity_log_internal_type.py  0015_auth.py  0016_chat_messages.py  0017_alert_rule_group.py  0018_notification_providers_channels.py  0019_alert_rule_node.py  0020_system_settings.py
backend/src/noc/: config.py  main.py
backend/src/noc/application/: activity.py  activity_events.py  activity_log.py  dashboard.py  envelopes.py  gateway_link_selection.py  gateway_stats.py  ingest.py  node_filters.py  settings_registry.py
backend/tests/: conftest.py  test_activity.py  test_activity_events.py  test_admin_pipeline.py  test_admin_sets.py  test_alerting.py  test_auth.py  test_batches.py  test_chat.py  test_config_editor.py  test_dashboard.py  test_gateway_routing.py  test_gateways.py  test_hardening.py  test_ingest.py  test_node_gateway_links.py  test_notifications.py  test_organization.py  test_profiles.py  test_remote_flags.py  test_settings.py  test_system.py
gateway/: Dockerfile  pyproject.toml
gateway/src/gateway/: config.py  events.py  main.py  transport_manager.py
gateway/src/gateway/command_queue/: consumer.py
gateway/tests/: test_admin_gateway.py  test_config.py  test_config_set.py  test_contract.py  test_decoder.py  test_gateway_admin_sets.py  test_gateway_remote_flags.py  test_simulated_shared_nodes.py  test_tcp_transport.py  test_transport_manager.py  test_usb_ack_roundtrip.py  test_usb_execute_ack_set.py  test_usb_lifecycle.py
(+229 files in other folders)
