[project]
name = "noc-backend"
version = "0.1.0"
description = "Meshtastic NOC — backend (API REST, WebSockets, dominio)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "alembic>=1.14,<2",
    "asyncpg>=0.30,<1",
    "aiosqlite>=0.20,<1",
    "redis>=5.2,<6",
    "httpx>=0.28,<1",
    # Introspección del esquema de configuración a partir de los protobufs
    # oficiales. Uso READ-ONLY (no se abre ninguna conexión); el gateway sigue
    # siendo el único que habla con dispositivos (ADR 0002).
    "meshtastic>=2.5,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noc"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
