[project]
name = "noc-gateway"
version = "0.1.0"
description = "Meshtastic NOC — pasarela hacia el nodo central Meshtastic"
requires-python = ">=3.12"
dependencies = [
    "meshtastic>=2.5,<3",
    "redis>=5.2,<6",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "jsonschema>=4.23",
    "ruff>=0.9",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gateway"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
